--- a/style.scss
+++ b/style.scss
@@ -69,11 +69,11 @@ p {
 }
 
 a {
-  color: #800080;
+  color: #8f76a3;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: #800080;
+    color: #8f76a3;
   }
 }
 
@@ -236,7 +236,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: #800080;
+      color: #8f76a3;
     }
   }
 }
@@ -333,7 +333,7 @@ code.highlighter-rouge {
 }
 
 // Specific (code samples, radare-exported asm)
-code { font-family: monospace; white-space: pre; font-size: 80%; line-height: 1.0; }
+code { font-family: monospace; white-space: pre; font-size: 80%; line-height: 1.0; color: #3c4042}
 pre { font-family: monospace; white-space: pre; font-size: 80%; line-height: 1.0; }
 pre.radareasm { background-color: #000000; color: #c0c0c0; overflow: scroll; }
 
