Test new colour

--- a/style.scss
+++ b/style.scss
@@ -260,7 +260,7 @@ nav {
     margin: 1.8em .8em;
     border-left: 2px solid $gray;
     padding: 0.1em 1em;
-    color: $gray;
+    color: #755c8a;
     font-size: 22px;
     font-style: italic;
   }
