--- a/style.scss
+++ b/style.scss
@@ -258,7 +258,7 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    border-left: 2px solid #755c8a;
     padding: 0.1em 1em;
     color: #755c8a;
     font-size: 22px;
