Return to old colour values

--- a/style.scss
+++ b/style.scss
@@ -258,9 +258,9 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid #755c8a;
+    border-left: 2px solid $gray;
     padding: 0.1em 1em;
-    color: #755c8a;
+    color: $gray;
     font-size: 22px;
     font-style: italic;
   }
