--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,8 @@
   </body>
 </html>
 
-<script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id=”MathJax-script” async src=”https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<!-- <script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
+<!-- <script id=”MathJax-script” async src=”https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
 
 <!-- for mathjax support -->
 {% if page.usemathjax %}
