--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -15,4 +15,5 @@
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     {% endif %}
