Update highlight colour

--- a/style.scss
+++ b/style.scss
@@ -141,12 +141,12 @@ small {
 // Specify the color of the selection
 ::-moz-selection {
   color: $black;
-  background: #4C566A;
+  background: #d2c8da;
 }
 
 ::selection {
   color: $black;
-  background: #4C566A;
+  background: #d2c8da;
 }
 
 // Nicolas Gallagher's micro clearfix hack
