--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@
 //
 // IMPORTS
 //
-
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;700&display=swap');
 @import "reset";
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
@@ -18,8 +18,8 @@ html {
 
 body {
   background: #ffffff;
-  font: 18px/1.4 $helvetica;
-  color: #4C566A;
+  font: 18px/1.4 'Source Serif Pro', serif;
+  color: #000000;
 }
 
 .container {
@@ -35,8 +35,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $helveticaNeue;
-  color: #4C566A;
+  font-family: 'Source Serif Pro', serif;
+  color: #000000;
   font-weight: bold;
 
   line-height: 1.7;
@@ -49,7 +49,9 @@ h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-family: 'Inter', sans-serif;
+  font-size: 64px;
+  text-decoration: underline;
 
   a {
     color: inherit;
@@ -74,13 +76,15 @@ p {
 }
 
 a {
-  color: #8f76a3;
+  color: #333333;
   text-decoration: none;
   cursor: pointer;
+  text-decoration: underline;
 
   &:hover,
   &:active {
-    color: #8f76a3;
+    color: #666666;
+    text-decoration: underline;
   }
 }
 
@@ -175,7 +179,7 @@ small {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid #4C566A;
+  border-bottom: 1px solid #000000;
 
   @include mobile {
     text-align: center;
@@ -211,9 +215,9 @@ small {
 
 .site-name {
   margin: 0;
-  color: #4C566A;
+  color: #000000;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: 'Source Serif Pro', serif;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -232,7 +236,7 @@ small {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: 'Source Serif Pro', serif;
   font-size: 18px;
 
   @include mobile {
@@ -244,14 +248,14 @@ nav {
 
   a {
     margin-left: 20px;
-    color: #4C566A;
+    color: #000000;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
 
     @include mobile {
       margin: 0 10px;
-      color: #8f76a3;
+      color: #000000;
     }
   }
 }
@@ -261,14 +265,23 @@ nav {
 //
 
 .posts>.post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid #4C566A;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
-.posts>.post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
+.posts>.post + .post {
+    margin-top: 0;
 }
+
+.post .comments, .post .read-more {
+    margin-top: 0;
+}
+
+.post h1 {
+    line-height: 0.5;
+}
+
+
 
 .post {
   blockquote {
@@ -288,13 +301,6 @@ nav {
     text-transform: uppercase;
     font-size: 15px;
   }
-}
-
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: #4C566A;
 }
 
 footer {
@@ -360,7 +366,7 @@ code {
   white-space: pre;
   font-size: 80%;
   line-height: 1.0;
-  color: #8b6aa6
+  color: #666666;
 }
 
 pre {
@@ -374,4 +380,12 @@ pre.radareasm {
   background-color: #000000;
   color: #c0c0c0;
   overflow: scroll;
+}
+
+.pagination {
+    padding-top: 64px;
+}
+
+.entry {
+    padding-top: 7px;
 }
