--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  background: #fdf6e3;
+  background: #ffffff;
   font: 18px/1.4 'Source Serif Pro', serif;
   color: #000000;
 }
