--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,16 +3,45 @@
 // VARIABLES
 //
 
-// Colors
-$blue: #4183C4;
+// Catppuccin Mocha Colors
+$base: #1e1e2e; // Base
+$mantle: #181825; // Mantle
+$crust: #11111b; // Crust
 
-// Grays
-$black: #000;
-$darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
-$lightGray: #eee;
-$white: #fff;
+$text: #cdd6f4; // Text
+$subtext0: #a6adc8; // Subtext0
+$subtext1: #bac2de; // Subtext1
+
+$surface0: #313244; // Surface0
+$surface1: #45475a; // Surface1
+$surface2: #585b70; // Surface2
+
+$overlay0: #6c7086; // Overlay0
+$overlay1: #7f849c; // Overlay1
+$overlay2: #9399b2; // Overlay2
+
+$blue: #89b4fa; // Blue
+$lavender: #b4befe; // Lavender
+$sapphire: #74c7ec; // Sapphire
+$sky: #89dceb; // Sky
+$teal: #94e2d5; // Teal
+$green: #a6e3a1; // Green
+$yellow: #f9e2af; // Yellow
+$peach: #fab387; // Peach
+$maroon: #eba0ac; // Maroon
+$red: #f38ba8; // Red
+$mauve: #cba6f7; // Mauve
+$pink: #f5c2e7; // Pink
+$flamingo: #f2cdcd; // Flamingo
+$rosewater: #f5e0dc; // Rosewater
+
+// Legacy variables mapped to Catppuccin
+$black: $crust;
+$darkerGray: $mantle;
+$darkGray: $base;
+$gray: $surface2;
+$lightGray: $surface0;
+$white: $text;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
