--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,37 +3,37 @@
 // VARIABLES
 //
 
-// Catppuccin Mocha Colors
-$base: #1e1e2e; // Base
-$mantle: #181825; // Mantle
-$crust: #11111b; // Crust
+// Catppuccin Latte Colors
+$base: #eff1f5; // Base
+$mantle: #e6e9ef; // Mantle
+$crust: #dce0e8; // Crust
 
-$text: #cdd6f4; // Text
-$subtext0: #a6adc8; // Subtext0
-$subtext1: #bac2de; // Subtext1
+$text: #4c4f69; // Text
+$subtext0: #6c6f85; // Subtext0
+$subtext1: #5c5f77; // Subtext1
 
-$surface0: #313244; // Surface0
-$surface1: #45475a; // Surface1
-$surface2: #585b70; // Surface2
+$surface0: #ccd0da; // Surface0
+$surface1: #bcc0cc; // Surface1
+$surface2: #acb0be; // Surface2
 
-$overlay0: #6c7086; // Overlay0
-$overlay1: #7f849c; // Overlay1
-$overlay2: #9399b2; // Overlay2
+$overlay0: #9ca0b0; // Overlay0
+$overlay1: #8c8fa1; // Overlay1
+$overlay2: #7c7f93; // Overlay2
 
-$blue: #89b4fa; // Blue
-$lavender: #b4befe; // Lavender
-$sapphire: #74c7ec; // Sapphire
-$sky: #89dceb; // Sky
-$teal: #94e2d5; // Teal
-$green: #a6e3a1; // Green
-$yellow: #f9e2af; // Yellow
-$peach: #fab387; // Peach
-$maroon: #eba0ac; // Maroon
-$red: #f38ba8; // Red
-$mauve: #cba6f7; // Mauve
-$pink: #f5c2e7; // Pink
-$flamingo: #f2cdcd; // Flamingo
-$rosewater: #f5e0dc; // Rosewater
+$blue: #1e66f5; // Blue
+$lavender: #7287fd; // Lavender
+$sapphire: #209fb5; // Sapphire
+$sky: #04a5e5; // Sky
+$teal: #179299; // Teal
+$green: #40a02b; // Green
+$yellow: #df8e1d; // Yellow
+$peach: #fe640b; // Peach
+$maroon: #e64553; // Maroon
+$red: #d20f39; // Red
+$mauve: #8839ef; // Mauve
+$pink: #ea76cb; // Pink
+$flamingo: #dd7878; // Flamingo
+$rosewater: #dc8a78; // Rosewater
 
 // Legacy variables mapped to Catppuccin
 $black: $crust;
