--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,24 @@
 {% if page.usemathjax %}
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
-    TeX: { equationNumbers: { autoNumber: "AMS" } }
+      TeX: { 
+        equationNumbers: { autoNumber: "AMS" },
+        extensions: ["AMSmath.js", "AMSsymbols.js"]
+      },
+      "HTML-CSS": { 
+        linebreaks: { automatic: true },
+        scale: 90,
+        styles: {
+          ".MathJax_Display": {
+            "text-align": "center",
+            margin: "0.5em 0",
+            "background-color": "transparent"
+          }
+        }
+      },
+      SVG: { 
+        linebreaks: { automatic: true } 
+      }
     });
   </script>
   <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
