--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/digest">Digest</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
