use catppuccin latte

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,16 +2,50 @@
 // VARIABLES
 //
 
-// Colors
-$blue: #4183C4;
+// Catppuccin Latte Color Palette
+// Accent colors
+$rosewater: #dc8a78;
+$flamingo: #dd7878;
+$pink: #ea76cb;
+$mauve: #8839ef;
+$red: #d20f39;
+$maroon: #e64553;
+$peach: #fe640b;
+$yellow: #df8e1d;
+$green: #40a02b;
+$teal: #179299;
+$sky: #04a5e5;
+$sapphire: #209fb5;
+$blue: #1e66f5;
+$lavender: #7287fd;
 
-// Grays
-$black: #000;
-$darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
-$lightGray: #eee;
-$white: #fff;
+// Text colors
+$text: #4c4f69;
+$subtext1: #5c5f77;
+$subtext0: #6c6f85;
+
+// Overlay colors
+$overlay2: #7c7f93;
+$overlay1: #8c8fa1;
+$overlay0: #9ca0b0;
+
+// Surface colors
+$surface2: #acb0be;
+$surface1: #bcc0cc;
+$surface0: #ccd0da;
+
+// Base colors
+$base: #eff1f5;
+$mantle: #e6e9ef;
+$crust: #dce0e8;
+
+// Legacy color mappings for backwards compatibility
+$black: $text;
+$darkerGray: $subtext1;
+$darkGray: $subtext0;
+$gray: $overlay1;
+$lightGray: $surface0;
+$white: $base;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
