--- a/style.scss
+++ b/style.scss
@@ -17,9 +17,9 @@ html {
 }
 
 body {
-  background: #ffffff;
+  background: $base;
   font: 17px/1.4 'Source Serif Pro', serif;
-  color: #000000;
+  color: $text;
 }
 
 .container {
@@ -36,7 +36,7 @@ h4,
 h5,
 h6 {
   font-family: 'Source Serif Pro', serif;
-  color: #000000;
+  color: $text;
   font-weight: bold;
 
   line-height: 1.7;
@@ -76,14 +76,14 @@ p {
 }
 
 a {
-  color: #333333;
+  color: $blue;
   text-decoration: none;
   cursor: pointer;
   text-decoration: underline;
 
   &:hover,
   &:active {
-    color: #666666;
+    color: $sapphire;
     text-decoration: underline;
   }
 }
@@ -144,13 +144,13 @@ small {
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
-  background: #d2c8da;
+  color: $base;
+  background: $pink;
 }
 
 ::selection {
-  color: $black;
-  background: #d2c8da;
+  color: $base;
+  background: $pink;
 }
 
 // Nicolas Gallagher's micro clearfix hack
@@ -179,7 +179,7 @@ small {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid $overlay0;
 
   @include mobile {
     text-align: center;
@@ -215,7 +215,7 @@ small {
 
 .site-name {
   margin: 0;
-  color: #000000;
+  color: $text;
   cursor: pointer;
   font-family: 'Source Serif Pro', serif;
   font-weight: 300;
@@ -248,14 +248,14 @@ nav {
 
   a {
     margin-left: 20px;
-    color: #000000;
+    color: $text;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
 
     @include mobile {
       margin: 0 10px;
-      color: #000000;
+      color: $text;
     }
   }
 }
@@ -331,7 +331,7 @@ a.footref {
 
 // Shade `text`
 code.highlighter-rouge {
-  background-color: rgba(0, 0, 0, 0.04);
+  background-color: $surface0;
 }
 
 /* CRITICAL FIX: Make MathJax render properly */
@@ -389,7 +389,7 @@ td,
 th {
   border-collapse: collapse;
   border-spacing: 0;
-  border: 1px solid #c0c0c0;
+  border: 1px solid $overlay0;
 }
 
 .post th {
@@ -398,7 +398,7 @@ th {
 }
 
 .post table tr:nth-child(2n) {
-  background-color: #f8f8f8;
+  background-color: $surface0;
 }
 
 .post td {
@@ -414,7 +414,7 @@ code {
   white-space: pre;
   font-size: 80%;
   line-height: 1.0;
-  color: #666666;
+  color: $subtext0;
 }
 
 pre {
@@ -425,20 +425,20 @@ pre {
 }
 
 pre.radareasm {
-  background-color: #000000;
-  color: #c0c0c0;
+  background-color: $crust;
+  color: $text;
   overflow: auto;
-  scrollbar-color: #000000 #000000;
+  scrollbar-color: $crust $mantle;
   scrollbar-width: thin;
-  
+
   &::-webkit-scrollbar {
-    background-color: #000000;
+    background-color: $crust;
     height: 8px;
     width: 8px;
   }
-  
+
   &::-webkit-scrollbar-thumb {
-    background-color: #eee;
+    background-color: $overlay0;
     border-radius: 4px;
   }
 }
